move article.md to content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="article.md"
+				<section data-markdown="content/article.md"
 						 data-separator="^\n\n\n"
 						 data-separator-vertical="^\n\n"
 						 data-separator-notes="^Note:"></section>
